--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
     </properties>
 
     <dependencies>
+        <!-- Apache commons dependency -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+        <!-- Unit test dependency -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
