Use the commons-validator dependency instead of commons-lang3

--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,9 @@
     <dependencies>
         <!-- Apache commons dependency -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
         </dependency>
 
         <!-- Unit test dependency -->
